[package]
name = "libsnow-generators"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
aws-config = "1.1"
aws-sdk-dynamodb = "1.16"
aws-sdk-s3 = "1.17"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
log = "0.4"
pretty_env_logger = "0.5"
quick-xml = { version = "0.31", features = ["serialize"] }
reqwest = { version = "0.11", features = ["brotli"] }
rusqlite = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
